<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">
    <string name="app_name">TV</string>
    <string name="app_exit">Press back again to exit</string>
    <string name="vod_last">Last seen <xliff:g name="name">%s</xliff:g></string>
    <string name="live_pass">Pass</string>
    <string name="live_line">Line <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_title"><xliff:g name="name">%s</xliff:g> : <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_site">Site: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_year">Year: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_area">Area: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_type">Type: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_author">Producer: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_tv">Studio: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_series">Series: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_pubdate">Release Date: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_duration">Duration: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_score">Score:&#160;</string>
    <string name="detail_director">Director: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_actor">Actor: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_content">Summary: <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_director_title">Director</string>
    <string name="detail_actor_title">Actor</string>
    <string name="detail_desc">Summary</string>
    <string name="detail_rel">Related</string>
    <string name="detail_rel_all">All %1$d</string>
    <string name="detail_gallery_all">All %d</string>
    <string name="gallery_counter">%d / %d</string>
    <string name="gallery_saved">Saved to gallery</string>
    <string name="gallery_save_fail">Save failed</string>
    <string name="keep">Keep</string>
    <string name="keep_add">Added</string>
    <string name="keep_del">Removed</string>
    <string name="play">Play</string>
    <string name="play_op">OP</string>
    <string name="play_ed">ED</string>
    <string name="play_next">Next</string>
    <string name="play_prev">Prev</string>
    <string name="play_episodes">Episodes</string>
    <string name="play_loop">Loop</string>
    <string name="play_timer">Timer</string>
    <string name="play_time">Time</string>
    <string name="play_netspeed">Net Speed</string>
    <string name="play_duration">Duration</string>
    <string name="play_mini_progress">Mini</string>
    <string name="play_video_title">Title</string>
    <string name="play_danmu">Danmu</string>
    <string name="play_display">Display</string>
    <string name="play_speed">Speed</string>
    <string name="play_change">Change</string>
    <string name="play_forward">→</string>
    <string name="play_backward">←</string>
    <string name="play_invert">Invert</string>
    <string name="play_across">Across</string>
    <string name="play_reverse">Reverse</string>
    <string name="play_track_text">Text</string>
    <string name="play_track_audio">Audio</string>
    <string name="play_track_video">Video</string>
    <string name="subtitle_search">Subtitle Search</string>
    <string name="subtitle_search_hint">Enter video name</string>
    <string name="subtitle_search_empty">No subtitles found</string>
    <string name="play_forward_hint">Normal play switched</string>
    <string name="play_backward_hint">Reverse play switched</string>
    <string name="play_now">Playing: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_ready">Ready to play: <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_parse">Switching parse to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_flag">Switching flag to <xliff:g name="name">%s</xliff:g></string>
    <string name="play_switch_site">Switching site to <xliff:g name="name">%s</xliff:g></string>
    <string name="parse">Parse</string>
    <string name="parse_god">Super</string>
    <string name="parse_from">Parse from: <xliff:g name="name">%s</xliff:g></string>
    <string name="push">Push</string>
    <string name="search_keyword">Keywords…</string>
    <string name="search_record">History</string>
    <string name="search_hot">Hot</string>
    <string name="site_choose_title">Choose Search Source</string>
    <string name="site_select_all">Select All</string>
    <string name="site_select_none">Select None</string>
    <string name="search_record_clear">Clear</string>
</resources>